[project]
name = "pyspark-projects"
version = "0.1.0"
description = "\"Package Manager for pyspark projects\""
authors = [
    {name = "\"ruwirowe\""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
